# simulados-sedu

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile.frontend  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  REVIEW.md  docker-entrypoint.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 993ae9d17454_schema_inicial.py
backend/app/: config.py  database.py  dominio_labels.py  enums.py  exceptions.py  models.py  schema_migrations.py
backend/app/api/: deps.py  main.py  permissoes.py
backend/app/repositories/: etiqueta_repository.py  questao_repository.py  turma_repository.py  usuario_repository.py
backend/app/services/: auditoria_service.py  auth_service.py  configuracao_service.py  diagnostico_service.py  ia_controlada_service.py  importacao_service.py  metricas_questoes_service.py  (+6 more)
backend/scripts/: _mocks_export.json  cadastrar_questao.py  exemplo_importacao.json  importar_enem_zip.py  init_db.py  reset_db.py  seed_admin.py  seed_demo.py  seed_etiquetas.py  seed_extras.py  seed_from_mocks.py  seed_questoes_demo.py  seed_questoes_extra.py  smoke_seguranca.py  teste_demo_http.py  teste_fluxo_simulado.py  teste_gerar_prova.py  teste_importar.py  teste_inserir.py  verificar_banco.py
backend/tests/: conftest.py  test_auth.py  test_autorizacao.py  test_ciclo.py  test_guardas.py  test_validacoes.py
(+266 files in other folders)
