[project]
name = "sedu-simulados-backend"
version = "0.1.0"
description = "Backend FastAPI do Simulados SEDU"
requires-python = ">=3.12,<3.13"
dependencies = [
    "SQLAlchemy>=2.0,<3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "debugpy>=1.8",
    "PyJWT>=2.8",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
]

# Aplicação (não é um pacote distribuível) — evita o uv tentar "buildar" o projeto.
[tool.uv]
package = false

[tool.vercel]
entrypoint = "app.api.main:app"
